--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minesweeper BOOOM!</title>
+
+    <link rel="icon" type="image/png" href="assets/img/favicon/favicon.png">
+
+    <title>BOOOM!</title>
+
 </head>
 <body>
     
