--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Minesweeper BOOOM! Classic MS game with a modern twist! 
+        Search for mines using neighbouring fields as indicators where the mines are, find them all and win the game!">
+    <meta name="keywords" content="minesweeper, minesweeper booom, booom, modern minesweeper">
+    <meta author="Marja Marinic">
 
     <link rel="icon" type="image/png" href="assets/img/favicon/favicon.png">
 
     <title>BOOOM!</title>
-
 </head>
+
 <body>
-    
+
 </body>
 </html>
