add: navbar link buttons, icons

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <header>
         <div class="container">
             <nav class="navbar navbar-light">
-                <a href="#" class="navbar-brand"> 
+                <a href="index.html" class="navbar-brand"> 
                     <img src="assets/img/logo/logo.svg" alt="Minesweeper BOOOM! logo" width="200" height="70" class="d-inline-block align-center">
                 </a>
                 
@@ -37,19 +37,26 @@
                     aria-expanded="false"
                     aria-label="Toggle navigation"
                 >
-                    <span class="navbar-toggler-icon"></span>
+                    <i class="fas fa-cog"></i>
+
                 </button>
 
                 <div class="collapse navbar-collapse" id="toggleMobileMenu">
                     <ul class="navbar-nav text-end">
                         <li>
-                            <a class="nav-link" href="#">Tutorial</a>
+                            <a class="nav-link" href="#">
+                                <button type="button">Tutorial</button>
+                            </a>
                         </li>
                         <li>
-                            <a class="nav-link" href="#">Settings</a>
+                            <a class="nav-link" href="#">
+                                <button type="button">Settings</button>
+                            </a>
                         </li>
                         <li>
-                            <a class="nav-link" href="#">Leaderboard</a>
+                            <a class="nav-link" href="#">
+                                <button type="button">Leaderboard</button>
+                            </a>
                         </li>
                     </ul>
                 </div>
