--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
                     aria-label="Toggle navigation"
                 >
                     <i class="fas fa-cog"></i>
-
                 </button>
 
                 <div class="collapse navbar-collapse" id="toggleMobileMenu">
@@ -63,6 +62,12 @@
             </nav>
         </div>
     </header>
+
+    <!-- Minesweeper -->
+    <section>
+        <h1>MINESWEEPER</h1>
+        <div class="board"></div>
+    </section>
 
     <!-- Footer -->
     <footer class="fixed-bottom">
