--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <!-- Minesweeper -->
     <section>
         <h1>MINESWEEPER</h1>
-        <div class="board"></div>
+        <div class="board dark"></div>
     </section>
 
     <!-- Footer -->
@@ -94,6 +94,6 @@
     <!-- Jquery CDN -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <!-- Custom JS Script -->
-    <script src="assets/js/script.js" type="text/javascript"></script>
+    <script src="assets/js/minesweeper.js" type="text/javascript"></script>
 </body>
 </html>
