--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
     <section>
         <h1>MINESWEEPER</h1>
         <button class="new-game" onclick="startAgain()">NEW</button>
+        <div id="timer">
+            00:00
+        </div>
         <div id="board" class="board dark"></div>
     </section>
 
