add: defeat message

--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
 
     <!-- Minesweeper Refresh Game/ Win/ Lose Modal -->
     <div id ="game-modal-container" class="game-modal-container" onclick="closeModal()">
-        <div id="game-modal">
+        <div id="game-modal" class="game-modal">
             <h2>Play again?</h2>
             <p>All progress will be lost!</p>
-            <button id="play-again" onclick="playAgain()">OFC</button>
-            <button id="do-not-play-again" onclick="closeModal()">Hell NO!</button>
+            <button id="play-again-btn" onclick="playAgain()">OFC</button>
+            <button id="do-not-play-again-btn" onclick="closeModal()">Hell NO!</button>
         </div>
     </div>
 
