add: timer function

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <!-- Minesweeper Refresh Game/ Win/ Lose Modal -->
     <div id ="game-modal-container" class="game-modal-container" onclick="closeModal()">
         <div id="game-modal" class="game-modal">
-            <button id="play-again-btn" onclick="playAgain()">OFC</button>
+            <button id="play-again-btn" onclick="playAgain(); pause();">OFC</button>
             <button id="do-not-play-again-btn" onclick="closeModal()">Hell NO!</button>
         </div>
     </div>
