add: header styles

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         <!-- Header -->
         <header>
             <div class="container">
-                <nav class="navbar navbar-light">
+                <nav class="navbar navbar-light fixed-top navbar-layout">
                     <a href="index.html" class="navbar-brand"> 
-                        <img src="assets/img/logo/logo.svg" alt="Minesweeper BOOOM! logo" width="200" height="70" class="d-inline-block align-center">
+                        <img class="logo" src="assets/img/logo/logo.svg" alt="Minesweeper BOOOM! logo">
                     </a>
                     
                     <button
