--- a/index.html
+++ b/index.html
@@ -102,22 +102,25 @@
         </section>
 
         <!-- Footer -->
-        <footer class="fixed-bottom">
-            <div class="container">
-            <div class="row">
-                <div class="col">
-                    <a href="#">
-                        <button type="button"><i class="far fa-envelope-open"></i><br>
-                            Connect
-                        </button>
-                    </a>
+        <footer class="fixed-bottom ">
+            <div class="container footer-styles">
+                <div class="row">
+                    <div class="col-4 align-footer">
+                        <a href="#">
+                            <button type="button"><i class="far fa-envelope-open"></i><br class="d-none d-md-block">
+                                Connect
+                            </button>
+                        </a>
+                    </div>
+                    <div class="col-4 align-footer">
+                        <i class="fas fa-volume-mute"></i>
+                    </div>
+                    <div class="col-4 align-footer">
+                        <a href="https://github.com/almost-good" target="_blank" rel="noopener"><i class="fab fa-github"></i></a>
+                        <a href="https://www.linkedin.com/in/marja-marinic-6968501a6/" target="_blank" rel="noopener"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="https://instagram.com/" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
+                    </div>
                 </div>
-                <div class="col">
-                    <a href="https://github.com/almost-good" target="_blank" rel="noopener"><i class="fab fa-github"></i></a>
-                    <a href="https://www.linkedin.com/in/marja-marinic-6968501a6/" target="_blank" rel="noopener"><i class="fab fa-linkedin-in"></i></a>
-                    <a href="https://instagram.com/" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
-                </div>
-            </div>
             </div>
         </footer>
     </div>
