--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     </a>
                     
                     <button
-                        class="navbar-toggler"
+                        class="navbar-toggler settings-btn"
                         type="button"
                         data-bs-toggle="collapse"
                         data-bs-target="#toggleMobileMenu"
@@ -38,7 +38,7 @@
                         aria-expanded="false"
                         aria-label="Toggle navigation"
                     >
-                        <i class="fas fa-cog"></i>
+                        <i class="fas fa-cog settings-icon"></i>
                     </button>
 
                     <div class="collapse navbar-collapse" id="toggleMobileMenu">
@@ -99,7 +99,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col">
+                    <div class="col minesweeper">
                         <div id="board" class="board dark">
                         </div>
                     </div>
@@ -111,20 +111,20 @@
         <footer class="fixed-bottom ">
             <div class="container footer-styles">
                 <div class="row">
-                    <div class="col-4 align-footer">
+                    <div class="col-5 align-footer">
                         <a href="#">
-                            <button type="button"><i class="far fa-envelope-open"></i><br class="d-none d-md-block">
+                            <button class="connect-btn" type="button"><i class="far fa-envelope-open"></i>
                                 Connect
                             </button>
                         </a>
                     </div>
-                    <div class="col-4 align-footer">
-                        <i class="fas fa-volume-mute"></i>
+                    <div class="col-2 align-footer">
+                        <i class="fas fa-volume-mute volume-icon"></i>
                     </div>
-                    <div class="col-4 align-footer">
-                        <a href="https://github.com/almost-good" target="_blank" rel="noopener"><i class="fab fa-github"></i></a>
-                        <a href="https://www.linkedin.com/in/marja-marinic-6968501a6/" target="_blank" rel="noopener"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="https://instagram.com/" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
+                    <div class="col-5 align-footer">
+                        <a href="https://github.com/almost-good" target="_blank" rel="noopener"><i class="fab fa-github social-links"></i></a>
+                        <a href="https://www.linkedin.com/in/marja-marinic-6968501a6/" target="_blank" rel="noopener"><i class="fab fa-linkedin-in social-links"></i></a>
+                        <a href="https://instagram.com/" target="_blank" rel="noopener"><i class="fab fa-instagram social-links"></i></a>
                     </div>
                 </div>
             </div>
