update: footer cleanup

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
         <!-- Minesweeper -->
         <section>
-            <div class="container">
+            <div class="container game-container">
                 <div class="row ms-items">
                     <div class="col-2 flag-count">
                         <div id="flag-count">
@@ -100,7 +100,7 @@
                 </div>
                 <div class="row">
                     <div class="col minesweeper">
-                        <div id="board" class="board dark">
+                        <div id="board" class="board board-dark">
                         </div>
                     </div>
                 </div>
@@ -108,7 +108,7 @@
         </section>
 
         <!-- Footer -->
-        <footer class="fixed-bottom ">
+        <footer class="fixed-bottom">
             <div class="container footer-styles">
                 <div class="row">
                     <div class="col-5 align-footer">
