--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </div>
 
         <!-- Minesweeper -->
-        <section>
+        <section class="wrap-game">
             <div class="container game-container">
                 <div class="row ms-items">
                     <div class="col-2 flag-count">
@@ -100,16 +100,16 @@
                 </div>
                 <div class="row">
                     <div class="col minesweeper">
-                        <div id="board" class="board board-dark">
+                        <div id="board" class="board">
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-
+    </div>
         <!-- Footer -->
-        <footer class="fixed-bottom">
-            <div class="container footer-styles">
+        <footer class="footer-styles">
+            <div class="container">
                 <div class="row">
                     <div class="col-5 align-footer">
                         <a href="#">
