add: remap click function

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         </div>
                     </div>
                     <div class="col-2 flag-btn">
-                        <button class="flag-btn-size">
+                        <button id="remap-click" class="flag-btn-size" onclick="remapClick()">
                             <i class="far fa-flag"></i>
                         </button>
                     </div>
