add: styling, fix functions

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <!-- Minesweeper Refresh Game/ Win/ Lose Modal -->
     <div id="game-modal-container" class="game-modal-container" onclick="closeModal()">
         <div id="game-modal" class="game-modal">
-            <button id="play-again-btn" onclick="playAgain()">OFC</button>
+            <button id="play-again-btn" onclick="playAgain()">OFC!</button>
             <button id="do-not-play-again-btn" onclick="closeModal()">Hell NO!</button>
         </div>
     </div>
@@ -123,7 +123,7 @@
             </table>
         </div>
     </div>
-    </div>
+
 
     <div class="container-fluid full-game-container">
         <!-- Minesweeper -->
@@ -135,7 +135,7 @@
                         00
                     </div>
                     <button id="remap-click" class="flag-btn-size" onclick="remapClick()">
-                        <i class="far fa-flag"></i>
+                        <i class="fas fa-bomb"></i>
                     </button>
                 </div>
                 <div class="col-4">
