add: minesweeper style

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <img class="logo" src="./assets/img/logo/logo.svg" alt="Minesweeper BOOOM! logo">
             </a>
 
-            <button class="navbar-toggler settings-btn" type="button" data-bs-toggle="collapse"
+            <button id="menu" class="navbar-toggler settings-btn" type="button" data-bs-toggle="collapse"
                 data-bs-target="#toggleMobileMenu" aria-controls="toggleMobileMenu" aria-expanded="false"
                 aria-label="Toggle navigation">
                 <i class="fas fa-cog settings-icon"></i>
